--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.cinemachine": "2.6.15",
     "com.unity.collab-proxy": "1.17.0",
     "com.unity.ext.nunit": "1.0.6",
+    "com.unity.formats.fbx": "4.2.0",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
